// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. Standard template renders a single child element 1`] = `
<Styled(View)>
  <SliceContainer>
    <ChildrenContainer>
      <ChildContainer
        key="08604618-fb0e-11e7-a987-7fcf5e9983dc"
      >
        <ExampleChild
          key="08604618-fb0e-11e7-a987-7fcf5e9983dc"
        />
      </ChildContainer>
    </ChildrenContainer>
  </SliceContainer>
</Styled(View)>
`;

exports[`2. Standard template renders two child elements 1`] = `
<Styled(View)>
  <SliceContainer>
    <ChildrenContainer>
      <ChildContainer
        key="08604618-fb0e-11e7-a987-7fcf5e9983dc"
      >
        <ExampleChild
          key="08604618-fb0e-11e7-a987-7fcf5e9983dc"
        />
      </ChildContainer>
      <Separator
        key="separator-08604618-fb0e-11e7-a987-7fcf5e9983dd"
      />
      <ChildContainer
        key="08604618-fb0e-11e7-a987-7fcf5e9983dd"
      >
        <ExampleChild
          key="08604618-fb0e-11e7-a987-7fcf5e9983dd"
        />
      </ChildContainer>
    </ChildrenContainer>
  </SliceContainer>
</Styled(View)>
`;

exports[`3. Standard template renders three child elements 1`] = `
<Styled(View)>
  <SliceContainer>
    <ChildrenContainer>
      <ChildContainer
        key="08604618-fb0e-11e7-a987-7fcf5e9983dc"
      >
        <ExampleChild
          key="08604618-fb0e-11e7-a987-7fcf5e9983dc"
        />
      </ChildContainer>
      <Separator
        key="separator-08604618-fb0e-11e7-a987-7fcf5e9983dd"
      />
      <ChildContainer
        key="08604618-fb0e-11e7-a987-7fcf5e9983dd"
      >
        <ExampleChild
          key="08604618-fb0e-11e7-a987-7fcf5e9983dd"
        />
      </ChildContainer>
      <Separator
        key="separator-08604618-fb0e-11e7-a987-7fcf5e9983de"
      />
      <ChildContainer
        key="08604618-fb0e-11e7-a987-7fcf5e9983de"
      >
        <ExampleChild
          key="08604618-fb0e-11e7-a987-7fcf5e9983de"
        />
      </ChildContainer>
    </ChildrenContainer>
  </SliceContainer>
</Styled(View)>
`;

exports[`4. Lead and two template renders a single child element 1`] = `
<ConfigWrapper>
  <SliceContainer>
    <Container>
      <LeadAndTwoContainer>
        <ExampleChild
          key="lead"
        />
      </LeadAndTwoContainer>
    </Container>
  </SliceContainer>
</ConfigWrapper>
`;

exports[`5. Lead and two template renders two child elements 1`] = `
<ConfigWrapper>
  <SliceContainer>
    <Container>
      <LeadAndTwoContainer>
        <ExampleChild
          key="lead"
        />
      </LeadAndTwoContainer>
      <Separator />
      <SupportsContainer>
        <SupportContainer
          key="support-container-support1"
        >
          <ExampleChild
            key="support1"
          />
        </SupportContainer>
      </SupportsContainer>
    </Container>
  </SliceContainer>
</ConfigWrapper>
`;

exports[`6. Lead and two template renders three child elements 1`] = `
<ConfigWrapper>
  <SliceContainer>
    <Container>
      <LeadAndTwoContainer>
        <ExampleChild
          key="lead"
        />
      </LeadAndTwoContainer>
      <Separator />
      <SupportsContainer>
        <SupportContainer
          key="support-container-support1"
        >
          <ExampleChild
            key="support1"
          />
        </SupportContainer>
        <SupportContainer
          key="support-container-support2"
        >
          <ExampleChild
            key="support2"
          />
        </SupportContainer>
      </SupportsContainer>
    </Container>
  </SliceContainer>
</ConfigWrapper>
`;

exports[`7. Standard tracking roles 1`] = `
Array [
  "standard-1",
  "standard-2",
  "standard-3",
]
`;

exports[`8. Lead and two tracking roles 1`] = `
Array [
  "lead-and-two",
  "lead-and-two-supporting-1",
  "lead-and-two-supporting-2",
]
`;
